# snbeat

./: .env.example  .gitignore  Cargo.toml  README.md  labels.example.toml  viewing_keys.toml.example
.githooks/: pre-push
.github/workflows/: ci.yml
crates/pf-query/: Cargo.toml  README.md
crates/pf-query/src/: bloom.rs  decode.rs  dto.rs  main.rs
examples/: bench_probes.rs
src/: error.rs  lib.rs  main.rs  utils.rs
src/app/: actions.rs  input.rs  mod.rs  state.rs
src/app/views/: address_info.rs  block_detail.rs  class_info.rs  mod.rs  tx_detail.rs
src/config/: mod.rs
src/data/: cache.rs  mod.rs  pathfinder.rs  rpc.rs  token_metadata.rs  types.rs
src/decode/: abi.rs  calldata.rs  class_cache.rs  events.rs  functions.rs  mod.rs  outside_execution.rs  privacy.rs  privacy_sync.rs  trace.rs
src/decode/privacy_crypto/: decryption.rs  hashes.rs  keys.rs  mod.rs  storage_slots.rs  types.rs
src/network/: address.rs  block.rs  class.rs  dune.rs  event_window.rs  helpers.rs  mod.rs  prices.rs  search.rs  transaction.rs  voyager.rs  ws.rs
src/registry/: known_addresses.rs  mod.rs  user_labels.rs  viewing_keys.rs
src/search/: mod.rs  parser.rs
src/ui/: mod.rs  theme.rs
src/ui/views/: address_info.rs  block_detail.rs  blocks.rs  class_info.rs  mod.rs  tx_detail.rs
src/ui/widgets/: address_color.rs  event_tree.rs  help.rs  hex_display.rs  mod.rs  param_display.rs  price.rs  search_bar.rs  stateful_list.rs  status_bar.rs
tests/: address_flow_test.rs  address_refresh_test.rs  cache_pool_bench_test.rs  decode_test.rs  dedup_test.rs  deploy_account_test.rs  enrich_bench_test.rs  helpers_test.rs  merge_test.rs  navigation_test.rs  populate_selectors.rs  privacy_summary_test.rs  privacy_sync_live.rs  registry_test.rs  rpc_test.rs  search_test.rs  ws_address_stream_test.rs  ws_subscription_test.rs
