[package]
name = "pf-query"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
hex = "0.4"

# Blob decoding
bincode = { version = "2.0.1", features = ["serde"] }
zstd = "0.13"
primitive-types = { version = "0.12.1", features = ["serde"] }
siphasher = "1.0"
tower-http = { version = "0.6", features = ["trace"] }
