[package]
name = "pf-query"
version = "0.1.0"
edition = "2024"
description = "HTTP service exposing a Pathfinder SQLite database for fast Starknet queries (nonce history, contract events, storage batch, tx lookups). Companion service for the snbeat block explorer."
license = "MIT"
repository = "https://github.com/amanusk/snbeat"
homepage = "https://github.com/amanusk/snbeat"
readme = "README.md"
keywords = ["starknet", "pathfinder", "blockchain", "explorer", "http"]
categories = ["command-line-utilities", "web-programming::http-server", "database"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
hex = "0.4"

# Blob decoding
bincode = { version = "2.0.1", features = ["serde"] }
zstd = "0.13"
primitive-types = { version = "0.12.1", features = ["serde"] }
siphasher = "1.0"
tower-http = { version = "0.6", features = ["trace"] }
rayon = "1"

[dev-dependencies]
tempfile = "3"
